<resources>
    <string name="app_name">WiFi scanner</string>
    <string name="stop_scan">Stop scan</string>
    <string name="start_scan">Start scan</string>
    <string name="scan_once">Scan once</string>
    <string name="send_request">Send blackout message</string>
    <string name="send_reminder">Send schedule reminder</string>
    <string name="last_status">Last status:</string>
    <string name="last_scan">Last scan:</string>
    <string name="next_blackout">Next blackout:</string>
    <string name="networks">Networks</string>
    <string name="available_networks">Available networks</string>
    <string name="tracked_networks">Tracked networks</string>
    <string name="btn_x">X</string>
    <string name="db_format">%1$s db</string>
    <string name="keep_awake">Awake</string>
    <string name="power_mode">Power</string>
    <string name="scan_mode">Power</string>
</resources>