<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity"
        tools:ignore="HardcodedText"
        tools:viewBindingIgnore="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/white"
            android:background="?android:statusBarColor"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <TextView
                android:id="@+id/tvValueTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Period (minutes):"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tvValueTitle"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="6" />

            <SeekBar
                android:id="@+id/slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@id/btnScan"
                app:layout_constraintEnd_toStartOf="@id/btnScan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvValue" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/start_scan"
                android:minWidth="129dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnScanOnce"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:minWidth="129dp"
                android:text="@string/scan_once"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnScan" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cbSendRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_request"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/slider" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cbSendReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_reminder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cbSendRequest" />

            <TextView
                android:id="@+id/tvLastStatusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/last_status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cbSendReminder" />

            <TextView
                android:id="@+id/tvLastStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="8dp"
                android:text="---"
                app:layout_constraintStart_toEndOf="@id/tvLastStatusTitle"
                app:layout_constraintTop_toBottomOf="@id/cbSendReminder" />

            <TextView
                android:id="@+id/tvLastScanTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/last_scan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLastStatusTitle" />

            <TextView
                android:id="@+id/tvLastScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="4dp"
                android:text="---"
                app:layout_constraintStart_toEndOf="@id/tvLastStatusTitle"
                app:layout_constraintTop_toBottomOf="@id/tvLastStatus" />

            <TextView
                android:id="@+id/tvNextBlackoutTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/next_blackout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLastScan" />

            <TextView
                android:id="@+id/tvNextBlackout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="4dp"
                android:text="---"
                app:layout_constraintStart_toEndOf="@id/tvNextBlackoutTitle"
                app:layout_constraintTop_toBottomOf="@id/tvLastScan" />

            <TextView
                android:id="@+id/tvNetworksTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Available networks:"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNextBlackoutTitle" />

            <TextView
                android:id="@+id/tvNetworksCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tvNetworksTitle"
                app:layout_constraintTop_toBottomOf="@id/tvNextBlackoutTitle"
                tools:text="8" />

            <TextView
                android:id="@+id/tvAvailableNetworksListTitle"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/networks"
                android:textColor="@color/color_title"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNetworksCount" />

            <TextView
                android:id="@+id/tvTrackingNetworksListTitle"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/tracked_networks"
                android:textColor="@color/color_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNetworksCount" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNetworks"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAvailableNetworksListTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>